--- a/plugins/theme/themes/DarkBetter/style.css
+++ b/plugins/theme/themes/DarkBetter/style.css
@@ -211,12 +211,12 @@ ul.CMenu li ul li a.dis:hover {background-color: #181818; color: #333333}
 
 #sel {border: 1px dotted #555555}
 
-div#t {background: #181818 url(./images/t_bg.png) repeat-x center center; border-bottom: 1px solid #333333;}
+#t {background: #181818 url(./images/t_bg.png) repeat-x center center; border-bottom: 1px solid #333333;}
 #top-menu {
   background-color: #181818;
   border-bottom: 1px solid #333333;
 }
-div#t button.navbar-toggler {
+.navbar-toggler {
   background-image: none;
   border-color: #333333;
 }
